force-app/main/default/objects/LeanData__LD_Journey__c/LeanData__LD_Journey__c.object-meta.xml
<CustomObject>
    <label>LeanData Journey</label>
    <nameField>
        <label>LeanData Journey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeanData Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>