force-app/main/default/objects/LeanData__LD_Journey__c/fields/LeanData__Ideal_Total_Unique_Roles__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Ideal_Total_Unique_Roles__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ideal Total Unique Roles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>