force-app/main/default/objects/LeanData__LD_Journey__c/fields/LeanData__Is_Linked__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Is_Linked__c</fullName>
    <formula>NOT(ISBLANK(LeanData__Opportunity__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Linked</label>
    <type>Checkbox</type>
</CustomField>