force-app/main/default/objects/LeanData__LD_Journey__c/fields/LeanData__Latest_Sales_Signal_Date__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Latest_Sales_Signal_Date__c</fullName>
    <label>Latest Sales Signal Date</label>
    <type>DateTime</type>
</CustomField>