force-app/main/default/objects/LeanData__LD_Journey__c/fields/LeanData__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>LeanData Journeys</relationshipLabel>
    <relationshipName>LD_Journey_Linked_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>