force-app/main/default/objects/LeanData__LD_Journey__c/fields/LeanData__Potential_Member_Personas__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Potential_Member_Personas__c</fullName>
    <label>Potential Member Personas</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>