force-app/main/default/objects/LeanData__LD_Journey__c/fields/LeanData__Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Segment_Name__c</fullName>
    <formula>LeanData__Segment__r.Name</formula>
    <label>Journey Segment Name</label>
    <type>Text</type>
</CustomField>